--- a/src/components/App.css
+++ b/src/components/App.css
@@ -551,9 +551,12 @@ footer #donate,
 .App.home.khmerServer section .abs div { position:absolute; text-align: center; width:100%; box-sizing: border-box; margin-top:-30px; padding-right:80px;}
 .App.home.khmer.static section.orange-gradient > div > div > div a,
 .App.home.khmerServer section .abs div a { text-transform:uppercase; font-size:14px; overflow: hidden; color:#111312; padding-bottom:5px; position: relative; display: inline-block;}
+
+.nav #logo.khmer + .links a { position: relative; overflow: hidden; margin-top:5px;}
+
+.nav #logo.khmer + .links a.current::before,
 .App.home.khmer.static section.orange-gradient > div > div > div a::before,
 .App.home.khmerServer section .abs div a::before { content:''; display:block; width:110%; height:100%;box-shadow:inset 0 -1.5px 1px #152631; position: absolute;left:-5%;}
-
 
 .App.home.khmer.static header { display:flex; justify-content: space-between; align-items: stretch;}
 .App.home.khmer.static header > * { width:50%; }
