--- a/src/components/App.css
+++ b/src/components/App.css
@@ -645,12 +645,19 @@ footer #donate,
 .App.guidedsearch.khmer .static-container.sticky > div:last-child { padding:35px 0;}
 
 .App.guidedsearch.khmer .static-container.sticky > div:first-child + div [data-prop] { display:flex; flex-wrap: wrap; padding:15px 0 0px 0; }
-.App.guidedsearch.khmer .static-container.sticky > div:first-child + div [data-prop] .option { display:block; margin-bottom:5px; }
+.App.guidedsearch.khmer .static-container.sticky > div:first-child + div [data-prop] .option { display:block; margin-bottom:-5px; }
 .App.guidedsearch.khmer .static-container.sticky > div:first-child + div [data-prop="bdo:language"] .option { padding-right:20px; }
 .App.guidedsearch.khmer .static-container.sticky > div:first-child + div [data-prop="bdo:workGenre"] .option { width:30%; }
 .App.guidedsearch.khmer .static-container.sticky > div:first-child + div [data-prop="bdo:workIsAbout"] .option { width:50%; }
 .App.guidedsearch.khmer .static-container.sticky > div:first-child + div [data-prop] .option label span { font-size:15px; }
 
+
+
+.App.guidedsearch.khmer .static-container.sticky > div:first-child + div [data-prop] .option .empty-checkbox { font-size:0; position: relative;}
+.App.guidedsearch.khmer .static-container.sticky > div:first-child + div [data-prop] .option .empty-checkbox svg { font-size:22px; opacity:0;box-shadow: none;}
+.App.guidedsearch.khmer .static-container.sticky > div:first-child + div [data-prop] .option .empty-checkbox::after {
+   content:''; position: absolute; display: block;width:14px;height:14px;background:white; top:3px;left:3px;border:1px solid rgba(0,0,0,0.45);
+}
 
 .App.guidedsearch.khmer .static-container.sticky + div { 
    position:fixed; 
