--- a/src/components/App.css
+++ b/src/components/App.css
@@ -655,7 +655,12 @@ footer #donate,
 }
 
 .App.guidedsearch.khmer .static-container.sticky > div:first-child h1 { padding-top:80px; font-size:34px; margin:0;}
-.App.guidedsearch.khmer .static-container.sticky h2 { font-size:16px; color:#343434; text-transform: uppercase; padding-top:45px;margin:0;}
+.App.guidedsearch.khmer .static-container.sticky h2 { font-size:16px; color:#343434; text-transform: uppercase; padding-top:45px;margin:0; position: relative;}
+
+.App.guidedsearch.khmer .static-container.sticky .selector:hover h2 > * { visibility: visible;}
+.App.guidedsearch.khmer .static-container.sticky .selector h2 > * { visibility:hidden; }
+.App.guidedsearch.khmer .static-container.sticky .selector h2 > img { width:22px; vertical-align: -6px;/*position: absolute; right:0;*/ margin-left:20px;}
+.App.guidedsearch.khmer .static-container.sticky .selector h2 > span { font-weight: 400; font-size:10px; vertical-align: 2px; text-transform: none; padding-left:20px;}
 
 .App.guidedsearch.khmer .static-container.sticky > div:first-child + div h2 { border-bottom:2px solid #e3e3e3; padding-bottom:10px; }
 
@@ -4180,9 +4185,12 @@ a.result .contenu ul > div:last-child h3[lang=bo] span { font-size:18px;}
 {
    #latest .seeAll { margin-right:60px;}
    
-   #res-header > div, #results /*, #samples*/ { margin-left:calc((100% - 700px)/2);}
-   .SidePane.left { position:absolute; left:0;top:0; z-index:0 ;}
-   #res-container { position:relative; }
+   /*, #samples*/ 
+   /* no need / sticky
+   #res-header > div, #results { margin-left:calc((100% - 700px)/2);}
+   .SidePane.left { position:absolute; left:0;top:0; z-index:0 ;} 
+   #res-container { position:relative; } 
+   */
 
    .nav { padding-left:24px;padding-right:24px; max-width:100%; box-sizing: border-box;} 
    #about, #about+a { display:none;}
