--- a/src/components/App.css
+++ b/src/components/App.css
@@ -667,7 +667,7 @@ footer #donate,
 
 .App.guidedsearch.khmer .static-container.sticky > div:first-child .selector [data-prop] { position: absolute; right:0;  bottom:-16px; }
 .App.guidedsearch.khmer .static-container.sticky > div:first-child .selector label { margin:0; cursor: pointer; }
-.App.guidedsearch.khmer .static-container.sticky > div:first-child .selector label:first-child > span{ vertical-align:-2px; padding-right:12px;}
+.App.guidedsearch.khmer .static-container.sticky > div:first-child .selector label:first-of-type > span{ vertical-align:-2px; padding-right:12px;}
 
 .App.guidedsearch.khmer .static-container.sticky > div:first-child .selector label > span:last-child { font-size:15px; line-height: 20px; font-weight:500; color:#343434; }
 .App.guidedsearch.khmer .static-container.sticky > div:first-child .selector label > span:first-child:not(:last-child) { margin-right:30px; margin-top:4px; }
@@ -677,7 +677,7 @@ footer #donate,
 
 .App.guidedsearch.khmer .static-container.sticky > div:first-child + div {   
    background:white;
-   min-height:calc(100vh - 520px);
+   min-height:calc(100vh - 480px);
    padding-bottom:55px;
    padding-top:45px;
 }
