--- a/src/components/App.css
+++ b/src/components/App.css
@@ -652,9 +652,19 @@ footer #donate,
    background:#efefef;
    padding-bottom:40px;
    z-index:100;
+   transition:all 100ms ease-in-out;
 }
 
-.App.guidedsearch.khmer .static-container.sticky > div:first-child h1 { padding-top:80px; font-size:34px; margin:0;}
+.App.guidedsearch.khmer.scrolled .static-container.sticky > div:first-child {
+   padding-bottom:20px;
+}
+
+
+.App.guidedsearch.khmer .static-container.sticky > div:first-child h1 { padding-top:80px; font-size:34px; margin:0;
+   transition:all 100ms ease-in-out;
+}
+.App.guidedsearch.khmer.scrolled .static-container.sticky > div:first-child h1 { padding-top:20px; }
+
 .App.guidedsearch.khmer .static-container.sticky h2 { font-size:16px; color:#343434; text-transform: uppercase; margin:0; position: relative;}
 
 .App.guidedsearch.khmer .static-container.sticky .selector { padding-bottom:45px; scroll-margin-top: 380px;}
@@ -663,7 +673,10 @@ footer #donate,
 .App.guidedsearch.khmer .static-container.sticky .selector h2 > span { font-weight: 400; font-size:10px; vertical-align: 2px; text-transform: none; padding-left:20px;}
 .App.guidedsearch.khmer .static-container.sticky .selector:hover h2 > * { visibility: visible;}
 
-.App.guidedsearch.khmer .static-container.sticky > div:first-child .selector {padding-bottom:0; padding-top:40px;  position: relative; display: flex;}
+.App.guidedsearch.khmer .static-container.sticky > div:first-child .selector {padding-bottom:0; padding-top:40px;  position: relative; display: flex;
+   transition:all 100ms ease-in-out;
+}
+.App.guidedsearch.khmer.scrolled .static-container.sticky > div:first-child .selector { padding-top:20px; }
 
 .App.guidedsearch.khmer .static-container.sticky > div:first-child .selector [data-prop] { position: absolute; right:0;  bottom:-16px; }
 .App.guidedsearch.khmer .static-container.sticky > div:first-child .selector label { margin:0; cursor: pointer; }
