--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1419,6 +1419,14 @@ a.result .contenu ul > div:last-child p {
 a.result .contenu ul > div:first-child { position:relative;}
 a.result .contenu ul > div:first-child > svg { position:absolute; top:-16px; right:16px;font-size:14px; }
 
+[data-prop$="tmp/scans"] .colon,
+[data-prop$="tmp/incomplete"] .colon { display:none; }
+
+
+[data-prop$="tmp/scans"] span { font-size:13px; font-weight:700; text-transform: lowercase !important;}
+[data-prop$="tmp/scans"] > :nth-child(1) { order:2; padding-left:5px; }
+[data-prop$="tmp/scans"] > :nth-child(2) { order:1; }
+
 iframe.ontoSearch { width:calc(100% - 10px); border:none; margin-left:10px; height:500px;
    box-shadow:0 0 5px rgba(0,0,0,0.5); background-color:rgba(0,0,0,0.015);}
 
