--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3694,10 +3694,15 @@ h3 .expand svg { position:absolute; margin-top:-18px; }*/
 .resource .data [data-prop="bdo:workHasInstance"] .propCollapseHeader.in-false { margin-bottom:30px;}
 .resource .data [data-prop="bdo:workHasInstance"] .propCollapseHeader .expand { position:absolute;left:0;bottom:-30px;top:auto;}
 
+.resource .data [data-prop="bdo:workHasInstance"] .expand.linkToVersions,
 .resource .data [data-prop="bdo:workHasInstance"] .expand + .expand { right:0; left:auto; text-align: right; position: absolute; bottom:-25px;}
+
+.resource .data [data-prop="bdo:workHasInstance"] .expand.linkToVersions a,
 .resource .data [data-prop="bdo:workHasInstance"] .expand + .expand a { color:white; background-color: #d73449; font-weight: 500; padding:10px 15px; border-radius: 5px; border:none;}
 
 .resource .data [data-prop="bdo:workHasInstance"] .propCollapse + .expand + .expand { bottom:22px; }
+
+.resource .data [data-prop="bdo:workHasInstance"] .group + .expand.linkToVersions:last-child { position: relative; margin-bottom: 30px; width:100%; margin-top:-22px;}
 
 .resource .data [data-prop="bdo:workHasInstance"] span.in { margin-left:0;  }
 /* .resource .data [data-prop="bdo:workHasInstance"] span.in::before { content:'';display:block;} */
